<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main"
    android:background="@color/darkgreen"
    >

    <ImageView
        android:layout_width="23dp"
        android:layout_height="18dp"
        android:src="@drawable/line"
        android:id="@+id/imageView2"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >
    </ImageView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="45.39dp"
        android:layout_height="49dp"
        android:src="@drawable/log1"
        android:layout_marginTop="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >
    </ImageView>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="36.6dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="29dp"
        android:src="@drawable/ava"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >
    </ImageView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="29dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

    </TextView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="72dp"
        android:text="@string/question"
        android:textColor="@color/gray"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

    </TextView>


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/appCompatButton"
        android:layout_width="62dp"
        android:layout_height="65dp"
        android:background="@drawable/but"
        android:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="26dp"
        android:layout_marginTop="27dp"
        android:src="@drawable/in"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.AppCompatImageButton>


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/appCompatButton2"
        android:layout_width="62dp"
        android:layout_height="65dp"
        android:layout_marginTop="27dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/but"
        android:fontFamily="serif"
        android:src="@drawable/relax"
        app:layout_constraintStart_toEndOf="@+id/appCompatButton"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.AppCompatImageButton>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/appCompatButton3"
        android:layout_width="62dp"
        android:layout_height="65dp"
        android:layout_marginTop="27dp"
        android:layout_marginStart="19dp"
        android:background="@drawable/but"
        android:fontFamily="serif"
        android:src="@drawable/focus"
        app:layout_constraintStart_toEndOf="@+id/appCompatButton2"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.AppCompatImageButton>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/appCompatButton5"
        android:layout_width="62dp"
        android:layout_height="65dp"
        android:layout_marginTop="27dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/but"
        android:fontFamily="serif"
        android:src="@drawable/rectangle"
        app:layout_constraintStart_toEndOf="@+id/appCompatButton3"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.AppCompatImageButton>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/appCompatButton6"
        android:layout_width="62dp"
        android:layout_height="65dp"
        android:layout_marginTop="27dp"
        android:layout_marginStart="9dp"
        android:background="@drawable/but"
        android:fontFamily="serif"
        android:src="@drawable/rectangle"
        app:layout_constraintStart_toEndOf="@+id/appCompatButton5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.AppCompatImageButton>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/calm"
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton"
        tools:ignore="MissingConstraints">

    </TextView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="5dp"
        android:text="@string/relaxing"
        android:textColor="@color/white"

        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton"
        tools:ignore="MissingConstraints">

    </TextView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="5dp"
        android:text="@string/focused"
        android:textColor="@color/white"

        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton3"
        tools:ignore="MissingConstraints">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excited"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="7dp"

        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton5"
        tools:ignore="MissingConstraints">

    </TextView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card1"
        android:layout_width="339dp"
        android:layout_height="170dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/but"
        android:padding="20dp"
        android:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="MissingConstraints"
        >

        <TextView
            android:id="@+id/titletext"
            android:layout_width="180dp"
            android:layout_height="34dp"
            android:layout_marginEnd="120dp"

            android:text="@string/zagolovok"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/desctext"
            android:layout_width="156dp"
            android:layout_height="36dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="145dp"
            android:text="@string/krat"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titletext"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/detailsbutton"
            android:layout_width="138dp"
            android:layout_height="39dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/butpodrobnee"
            android:paddingHorizontal="20dp"
            android:text="@string/podrobnee"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desctext"
            />

        <ImageView
            android:id="@+id/illustration"
            android:layout_width="166dp"
            android:layout_height="111dp"
            android:layout_marginEnd="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/blockone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card2"
        android:layout_width="339dp"
        android:layout_height="170dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/but"
        android:padding="20dp"
        android:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        tools:ignore="MissingConstraints"
        >

        <TextView
            android:id="@+id/titletext1"
            android:layout_width="180dp"
            android:layout_height="34dp"
            android:layout_marginEnd="120dp"

            android:text="@string/zagolovok"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/desctext1"
            android:layout_width="156dp"
            android:layout_height="36dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="145dp"
            android:text="@string/krat"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titletext1"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/detailsbutton1"
            android:layout_width="138dp"
            android:layout_height="39dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/butpodrobnee"
            android:paddingHorizontal="20dp"
            android:text="@string/podrobnee"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desctext1"
            />

        <ImageView
            android:id="@+id/illustration1"
            android:layout_width="166dp"
            android:layout_height="111dp"
            android:layout_marginEnd="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/blocktwo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

<LinearLayout
    android:id="@+id/bottomBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingConstraints"
    android:orientation="horizontal"
    android:paddingVertical="12dp"
    android:weightSum="3"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/navHome"
        android:layout_width="28.78dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:layout_marginTop="47dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/log1"

        />
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/navSound"
        android:layout_width="20dp"
        android:layout_height="21.54dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/music"
        android:layout_marginTop="53dp"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/navProfile"
        android:layout_width="15.76dp"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/profile"
        android:layout_marginTop="52dp"
        />



</LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>